--- a/Collabily/src/index.html
+++ b/Collabily/src/index.html
@@ -17,7 +17,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#eeeeee">
 </head>
 
 <body>
